<resources>
    <string name="app_name">LocalOP</string>
    <string name="result_will_appear_here">Result will appear here</string>
    <string name="result_will_desplay_here">Result will desplay here</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_age">enter your age</string>
    <string name="check_discount_eligibility">check discount eligibility</string>
    <string name="it_student">it student</string>
    <string name="banned_from_store">banned from store</string>
    <string name="staff_member">staff member</string>
</resources>